force-app/main/default/objects/JBCXM__GSLRMLines__c/JBCXM__GSLRMLines__c.object-meta.xml
<CustomObject>
    <label>GS LRM Lines</label>
    <nameField>
        <label>GSLRMLines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS LRM Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>