force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__BookingDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__BookingDate__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>