force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__HeaderSourceId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HeaderSourceId__c</fullName>
    <label>Header SourceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>