force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__LRMHeader__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LRMHeader__c</fullName>
    <label>LRMHeader</label>
    <referenceTo>JBCXM__GSLRMHeader__c</referenceTo>
    <relationshipLabel>GSLRMLines</relationshipLabel>
    <relationshipName>GSLRMLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>