force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__OneTime__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OneTime__c</fullName>
    <label>One Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>