force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__Product__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>JBCXM__GSProduct__c</referenceTo>
    <relationshipLabel>GSLRMLines</relationshipLabel>
    <relationshipName>GSLRMLines</relationshipName>
    <type>Lookup</type>
</CustomField>