force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__SubscriptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SubscriptionEndDate__c</fullName>
    <label>Subscription EndDate</label>
    <type>Date</type>
</CustomField>