force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SubscriptionStartDate__c</fullName>
    <label>Subscription StartDate</label>
    <type>Date</type>
</CustomField>