force-app/main/default/objects/JBCXM__GSLRMLines__c/fields/JBCXM__Term__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Term__c</fullName>
    <label>Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>